gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/ice21060a/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:59bd260b04ce46dbfe5a20cc7584401b2db0669faf3c712d6683e7b506f51b33
size 26
